[tool.poetry]
name = "tmpl"
version = "1.1.0"
description = "Template abstraction for using multiple template engine backends in same code."
repository = "https://github.com/20c/tmpl"
readme = "README.md"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [{ include = "tmpl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# templating engines shouldn't be hard deps
django = ">=1.6"
jinja2 = ">=2"

# testing
coverage = ">=5"
pytest = ">=6"
pytest-django = ">=3.8"
pytest-cov = "*"

# linting
ruff = ">=0.1"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.2.3"

# ctl
ctl = ">=1"
twine = ">=3"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
